# taus-agent

./: .gitignore  MEMORY.md  README.md  README.zh.md  jobs.json  main.py  pyproject.toml  search_baidu.py
app/api/: __init__.py
prompts/: system.md  system_sub.md
skills/: x-reply.md
skills/ble-scanner/: SKILL.md
skills/browser-automation/: SKILL.md
skills/docx-to-markdown/: SKILL.md
skills/news-aggregator/: SKILL.md
skills/taus-wiki/: SKILL.md
skills/x-poster/: SKILL.md
skills/xiaohongshu-scraper/: SKILL.md
src/agent/: context.py  core.py  llm.py  persistence.py  prompts.py  signals.py  skill_loader.py  tool.py
src/agent/mbus/: __init__.py  bus.py  http_gateway.py  message.py  runner.py
src/agent/tools/: __init__.py  bash.py  create_agent.py  edit.py  messaging.py  read.py  write.py
src/agents/: llm.py
src/browser/: __init__.py  config.py  element.py  mouse.py  page.py  session.py
src/utils/: completer.py  repl.py
tests/: browser_test.py
