[project]
name = "taus-agent"
version = "0.0.1"
description = "taus-agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "browser-use>=0.11.13",
    "cdp-use>=0.1.0",
    "fastapi>=0.139.0",
    "httpx>=0.27.0",
    "psutil>=6.0.0",
    "pydantic>=2.0.0",
]
